commit 48